--- a/src/app/modulos/seguridad/grupos/grupos.component.html
+++ b/src/app/modulos/seguridad/grupos/grupos.component.html
@@ -1,3 +1,121 @@
-<p>
-  grupos works!
-</p>
+<div class="row">
+  <!-- Formulario -->
+  <div class="col-lg-12">
+    <div class="ibox float-e-margins">
+      <div class="ibox-title">
+        <h5>Grupos de usuarios</h5>
+        <div class="ibox-tools">
+          <a class="collapse-link">
+            <i class="fa fa-chevron-up"></i>
+          </a>
+          <a class="dropdown-toggle hide" data-toggle="dropdown" href="#">
+            <i class="fa fa-wrench"></i>
+          </a>
+          <ul class="dropdown-menu dropdown-user">
+            <li>
+              <a href="#">Config option 1</a>
+            </li>
+            <li>
+              <a href="#">Config option 2</a>
+            </li>
+          </ul>
+          <a class="close-link hide">
+            <i class="fa fa-times"></i>
+          </a>
+        </div>
+      </div>
+      <div class="ibox-content">
+        <div role="form" class="form-inline">
+          <div class="form-group">
+            <label for="sede" class="sr-only">Sede</label>
+            <select name="sede" id="sede" [(ngModel)]="sede" class="form-control input-sm" title="Sede" placeholder="Sede"
+              [disabled]="editar">
+              <option [ngValue]="sedeVacia" selected="selected">Seleccione una sede</option>
+              <option [ngValue]="s" *ngFor="let s of sedes">{{s.razon_social}}</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="grupo_id" class="sr-only">Identificador</label>
+            <input type="text" placeholder="Identificador" id="grupo_id" name="grupo_id" title="Identificador" class="form-control input-sm"
+              [(ngModel)]="grupo.grupo_id" [disabled]="editar">
+          </div>
+          <div class="form-group">
+            <label for="denominacion" class="sr-only">Denominación</label>
+            <input type="text" placeholder="Denominación" id="denominacion" name="denominacion" title="Denominación" class="form-control input-sm"
+              [(ngModel)]="grupo.denominacion">
+          </div>
+
+          <div class="checkbox m-r-xs">
+            <input type="checkbox" id="activo" name="activo" [(ngModel)]="grupo.activo" title="Estado de l grupo">
+            <label for="activo">
+              Activo
+            </label>
+          </div>
+
+          <button class="btn btn-primary " type="button" (click)="guardar()">
+            <i class="fa fa-check"></i>&nbsp;Guardar
+          </button>
+          <button class="btn btn-warning " type="button" (click)="cancelar()" [ngClass]="{'hide': !editar}">
+            <i class="fa fa-times"></i>
+            <span class="bold">Cancelar</span>
+          </button>
+          <button class="btn btn-danger " type="button" (click)="borrar()" [ngClass]="{'hide': !editar}">
+            <i class="fa fa-trash"></i>&nbsp;&nbsp;
+            <span class="bold">Borrar</span>
+          </button>
+          <div class="sk-spinner sk-spinner-cube-grid" [ngClass]="{'hide': !cargando}">
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+            <div class="sk-cube"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Fin de Formulario -->
+  <!-- Tabla -->
+  <div class="col-lg-12">
+    <div class="ibox float-e-margins">
+
+      <div class="ibox-content" style="">
+        <div class="row">
+          <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger">
+            <thead>
+              <tr>
+                <th class="hide">Tipo Identificación</th>
+                <th class="hide">Identificación</th>
+                <th class="hide">Sede Id</th>
+                  <th>Sede</th>
+                  <th>Identificador</th>
+                  <th>Denominación</th>
+                  <th>Activo</th>
+                  <th>Fecha Registro</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let g of grupos" style="cursor: pointer;">
+                <td class="hide">{{g.tipo_id}}</td>
+                <td class="hide">{{g.identificacion}}</td>
+                <td class="hide">{{g.sede_id}}</td>
+                <td>{{g.sede}}</td>
+                <td>{{g.grupo_id}}</td>
+                <td>{{g.denominacion}}</td>
+                <td>{{(g.activo===1)?'SI':'NO'}}</td>
+                <td>{{g.fecha_registro.date|date:'yyyy-MM-dd'}}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Fin de tabla -->
+
+
+</div>
